--- a/Thesis/thesis-previousWork.tex
+++ b/Thesis/thesis-previousWork.tex
@@ -1,16 +1,29 @@
 \chapter{Previous Work}
+
+\section{Sensorimotor synchronization}
+\subsection{Terminology}
+The main method of data collection for SMS tap based tests involve collection of the time delta between the tap and event onset, called the \textit{asynchrony}. The mean of the asynchonies is typically negative (\textit{NMA}), indicative of the participants anticipation of the beat rather than reaction. Positive asynchonies within the shortest reaction time window (150 ms) are arguably an anticipation of the preceeding stimuli. Furthermore, the standard deviation of the asynchrony $(SD_{asy})$ is an index of stability.  \cite{repp2013sensorimotor}
+
+Other important metrics include the variability and mean of the inter tap interval (\textit{ITI}) and the inter onset interval (\textit{IOI}), or the time between successive beats - measured in milliseconds. Mismatch between the ITI and IOI implies poor synchronization skill from the participant. 
+
+\subsection{Findings}
+Professional musicians exhibit a lower ITI variability with percussionists as well as pianists. Surprisingly, both amateurs and non-musicians had no $SD_{asy}$ difference. From a paper presented at the Music Perception and Cognition in 2012:
+\begin{quotation}
+    Stoklasa, Liebermann, and Fischinger reported that musicians playing their own brass or string instrument in synchrony with a metronome showed a negligible NMA (–2 ms), unlike their tapping (–13 ms). \cite{repp2013sensorimotor}
+\end{quotation}
+
+
+Isochronous vs. nonisochronous ~\cite{polak2016both}
+
+
 \section{Auditory Advantage}
 Decades of research into sensorimotor synchronization presents a clear advantage of the discretely timed auditory stimulus implying that the neural and evolutionary mechanisms underlying beat synchronization are modality-specific.
-~\cite{gan2015synchronization} The stability of beat synchronization to visual modalities (a flash of light) has been shown to be less stable that its auditory counterpart.
-
-
-
-
+~\cite{gan2015synchronization} The stability of beat synchronization to discrete visual modalities (a flash of light) has been shown to be less stable that its auditory counterpart.
 
 Concrete examples/figures?
 
 \section{Rhythmic Perception}
-Though seemingly a separate realm of study, the field of rhythmic perception represents an important contribution to the overall understanding of sensorimotor synchronization. The work involves measurement of the ability to recognize different rhythmic patterns to different stimuli in a listen and respond type of fashion. Researchers from the human computer interaction group at the University of Tampere, Finland, conducted an experiment in 2008 to confirm that the instantaneous auditory modality dominates rhythmic perception. Tactile follows close suit with the visual modality being the least suitable for accurately perceiving rhythmic information as well as the most mentally demanding. Rather than the traditional tap based test, users were given two rhythmic sections and asked to determine whether they were identical or not across modalities as well as combinations of each. ~\cite{jokiniemi2008crossmodal} Even though it yielded less correct results the tactile modality was, from the users point of view, almost as good as the auditory modality. Exploration of pulse length was called upon for further insight.
+Though seemingly a separate realm of study, the field of rhythmic perception is an important contribution to the overall understanding of sensorimotor synchronization. The work involves measurement of the ability to recognize different rhythmic patterns to different stimuli in a listen and respond type of fashion. Researchers from the human computer interaction group at the University of Tampere, Finland, conducted an experiment in 2008 to confirm that the instantaneous auditory modality dominates rhythmic perception. Tactile follows close suit with the visual modality being the least suitable for accurately perceiving rhythmic information as well as the most mentally demanding. Rather than the traditional tap based test, users were given two rhythmic sections and asked to determine whether they were identical or not across modalities as well as combinations of each. ~\cite{jokiniemi2008crossmodal} Even though it yielded less correct results the tactile modality was, from the users point of view, almost as good as the auditory modality. Exploration of pulse length was called upon for further insight.
 
 \section{A Continuous Visual Metronome}
 In a novel advancement challenging the auditory advantage and perhaps paving the way towards a more meaningful gesture, researchers in the Psychology department at Sun Yat-Sin University in Guangdong found continuous motion of a bouncing ball to be as stable as synchronization to an auditory metronome.
