python test files

--- a/Thesis/thesis-abstract.tex
+++ b/Thesis/thesis-abstract.tex
@@ -5,6 +5,13 @@
 \setlength{\parindent}{0em}
 
 \noindent
+
+\verb!This is sounding more like an introduction!
+
+\verb!maybe hold off on the abstract until you have your data results!
+
+
+
 The interstice is an intervening space. When applied to a rhythmic context, the interstitial beat can be represented by two distinct states; whether energy exists within this small moment in time or if it does not. 
 
 Does filling the space provide an added awareness or preparation for upcoming onsets? Can the gestural motion of the conductor be justified scientifically?
