--- a/Thesis/thesis-introduction.tex
+++ b/Thesis/thesis-introduction.tex
@@ -12,7 +12,7 @@ The practice of Dalcroze Eurythmics has sought to fill this knowledge gap as a c
 
 From nearly two decades of work as a licensed Dalcroze teacher and faculty at Carnegie Mellon University, Professor Stephen Neely has sought to further explore interstitial design. Through his research he imparts the question: what is gained when attempting to fill the space between the crusis (click moment of the beat) with a natural analogue wave, one that provides a build up and decay common to natural happenings, much like the gestural motion of a conductor?
 
-This research will add another dimension to each sensory modality to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythm awareness with the potential to impact future metronome implementations. 
+This research is an expansion of the existing sensory motor synchronization findings to the haptic modality with the intent to resolve the inquiry as to whether filling in the space between the beat, the interstitial, has an impact on rhythm awareness with the potential to impact future metronome implementations. 
 
 \section{Background}
 \subsection{Brief metronome history}
