--- a/Thesis/thesis-conclusions.tex
+++ b/Thesis/thesis-conclusions.tex
@@ -2,4 +2,19 @@
 
 \chapter{Conclusions} \label{chapConclusions}
 
-In conclusions, robots are the best.
+
+\section{Future Work}
+
+\subsection{Beat Tracking}
+
+Max Patch based on \verb!THIS RESEARCH! 
+
+does this
+
+for the purposing of testing this
+
+\subsection{Extra-musical Applications}
+
+Parkingson's research
+
+Stroke gait rehabilitation research
