--- a/Thesis/thesis-hapticDesign.tex
+++ b/Thesis/thesis-hapticDesign.tex
@@ -1,6 +1,30 @@
 \chapter{Haptic Design}
+This chapter discusses the design requirements, initial prototypes, and overall challenges overcome which led to the development of the final prototype, the vibrotactile array.
+
 \section{Requirements}
+
+
+
+\subsection{Initial Prototypes}
+
+\subsection{Vibrotactile Haptic}
 
 \section{Design Challenges}
 
-\section{Optimization}	
+Motor noise
+
+Managing power dips
+
+
+
+Debounce for tap tempo
+
+\section{Optimization}
+
+\subsection{Future Implementation}
+
+Bluetooth/Wireless
+
+Custom PCB
+
+Experiment with other vibrotactiles such as tachammer and LNA's
