--- a/Thesis/thesis-packages.tex
+++ b/Thesis/thesis-packages.tex
@@ -2,7 +2,11 @@
 % All packages used in this thesis.
 
 \usepackage{microtype}
+\usepackage{multirow}
+\usepackage[table,xcdraw]{xcolor}
+\usepackage{wrapfig}
 \usepackage{graphicx}
+\graphicspath{ {figures/} }
 \usepackage{epigraph}
 \usepackage[cmex10]{amsmath}
 \usepackage{amsfonts}
