--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -1,8 +1,9 @@
 \chapter{Method}
-
 This chapter outlines each test case, describes the motivation behind the test plan, and delves into both the hardware and software design required to implement the methodology. 
 
-Since the haptic domain is of primary focus, the auditory modality is utilized as a benchmark or baseline foundation.  The work presented in \ref{visualMet} extensively covers the idea of the interstitial beat occupying the visual domain and as such will not be re-evaluated here.
+The overall test principle was derived from traditional sensorimotor synchronization tasks in which a user is asked to tap to a corresponding stimulus. The time delta between the tap onset and the stimulus onset is tracked and plotted for future analysis. Since the haptic domain is of primary focus, the auditory modality functions primarily as a benchmark or baseline foundation.  The work presented in \ref{visualMet} extensively covers the idea of the interstitial beat occupying the visual domain and as such will not be re-evaluated here.
+
+\todo{Fill method intro in with more detail}
 
 Each test case is defined and presented in \ref{testPlan}. The overall software development is detailed in \ref{development}. The hardware setup and code re-purposing from TapArduino is discussed in \ref{tap_arduino}.
 
@@ -52,32 +53,44 @@ Each section had three subsections centered around either an audible metronome t
 
 \subsection{Audio File Generation}
 All tracks were rendered using the digital audio workstation (DAW) \textit{Logic Pro X} as \textit{.wav} files at a 44.1kHz sample rate with 16 bit resolution.
-
-\textbf{A1a} and \textbf{A3a} required a standard metronomic pulse. This was accomplished using the default Klopfgeist (metronome) plugin from Logic Pro X. No additional tuning was modified and the tonality was left at 0.83 of unity as shown in \ref{fig:klopfgeist}. 
-
-\begin{wrapfigure}{r}{0.25\textwidth}
+\subsubsection{Metronomic click and legato chime}
+\begin{wrapfigure}[8]{r}{5cm}
     \centering
-    \caption{Steady audibe click}
     \includegraphics[width=0.25\textwidth]{klopfgeist}
+    \caption{Default metronome}
     \label{fig:klopfgeist}
 \end{wrapfigure}
+\textbf{A1a} and \textbf{A3a} required a standard metronomic pulse. This was accomplished using the default Klopfgeist (metronome) plugin from Logic Pro X. No additional tuning was modified and the tonality was left at 0.83 of unity as shown in \ref{fig:klopfgeist}. 
 
-\textbf{A1a} and \textbf{A3b} however required a swing or legato type of chime in order to convey filling the interstitial space. To capture this effect the Klopfgeist tonality was increased to unity and tuned -27 semitones lower which served to both soften diminish the discrete click, provided an elongated or continuous audible sensation. To give the impression of a sound that was ramping up in amplitude and decaying after the peak, a tremolo effect which mimics a sawtooth wave was added to the signal chain as seen in \ref{fig:modClick}. Last, a multi-band EQ was placed at the end of the signal chain with a bandpass filter from 95Hz-750Hz to remove unwanted frequency presence and a 3.5dB high-Q peak at 220Hz to emphasize the tonality.
+\textbf{A1b} and \textbf{A3b} however required a swing or legato type of chime in order to convey filling the interstitial space. To capture this effect the Klopfgeist tonality was increased to unity and tuned -27 semitones lower which served to both soften diminish the discrete click, provided an elongated or continuous audible sensation. To give the impression of a sound that was ramping up in amplitude and decaying after the peak, a tremolo effect which mimics a sawtooth wave was added to the signal chain as seen in \ref{fig:modClick}. Last, a multi-band EQ was placed at the end of the signal chain with a bandpass filter from 95Hz-750Hz to remove unwanted frequency presence and a 3.5dB high-Q peak at 220Hz to emphasize the tonality.
 
 \begin{figure}[H]
     \centering
     \caption{Modified click parameters for interstitial tests.}
-        \subfloat[Modified Klopfgeist]{\includegraphics[width=0.25\columnwidth]{Klopfgeist_Modified}}
+        \subfloat[Modified metronome]{\includegraphics[width=0.25\columnwidth]{Klopfgeist_Modified}}
         \qquad
         \subfloat[Superimposed tremolo]{\includegraphics[width=0.4\columnwidth]{Tremolo}}
         \qquad
-        \subfloat[Equalized click tone]{\includegraphics[width=\textwidth]{Modified_Click_EQ}}
+        \subfloat[Equalized tone]{\includegraphics[width=\textwidth,height=0.25\textheight]{Modified_Click_EQ}}
     \label{fig:modClick}
 \end{figure}
 
-Shape comparison:
+The resultant waveform encapsulated the occupation of the interstitial space. A comparison of this waveform in contrast to it's discrete counterpart is shown in \ref{fig:click_comparison}. Note the envelope of signal (b) follows a natural build up and decay.
 
-Sibelius music
+\begin{figure}[H]
+    \centering
+    \caption{Waveform comparison}
+        \subfloat[A3a1: discrete audible click]{\includegraphics[width=0.5\columnwidth]{Click_waveform}}
+        \subfloat[A3b1: interstitial tone]{\includegraphics[width=0.5\columnwidth]{SwingClick_waveform}}
+    \label{fig:click_comparison}
+\end{figure}
+
+\subsubsection{Stacatto and legato melody}
+As a specific musical listening task, test cases \textbf{A2a}, \textbf{A4a} and \textbf{A2b}, \textbf{A4b} involve synchronization to a simple melodic sequence of notes. The music chosen was the well known nursery rhyme \textit{Pat-A-Cake}. 
+
+Each quarter note represents a beat and therefore a tap onset.
+
+\todo{Expand the reasoning for the musical tests}
 
 Dynamic tempi manipulation
 
