--- a/Thesis/thesis-packages.tex
+++ b/Thesis/thesis-packages.tex
@@ -38,7 +38,7 @@
 \usepackage{ctable}
 \usepackage{multirow}
 
-%\usepackage{todonotes}  % This package is slow to include.
+\usepackage{todonotes}  % This package is slow to include.
 \usepackage{xspace} % macros with trailing spaces
 \usepackage{siunitx}
 \usepackage[raggedright]{titlesec}  % Prevent line breaks in section titles.
