writing, commit hist of trial runs

--- a/Thesis/np_thesis.cls
+++ b/Thesis/np_thesis.cls
@@ -73,7 +73,7 @@
   \centering
   \scalebox{.2}{
     \hyperlink{contents}{  % Link To TOC -- define label in main file.
-      \includegraphics{figs/cmu_seal.png}
+      \includegraphics{figures/cmu_seal.png}
   }}
 \end{figure}
 
