--- a/Thesis/thesis-packages.tex
+++ b/Thesis/thesis-packages.tex
@@ -5,6 +5,7 @@
 \usepackage{multirow}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{wrapfig}
+\usepackage{musixtex}
 \usepackage{graphicx}
 \graphicspath{ {figures/} }
 \usepackage{epigraph}
