--- a/Thesis/thesis-abstract.tex
+++ b/Thesis/thesis-abstract.tex
@@ -6,11 +6,7 @@
 
 \noindent
 
-\verb!This is sounding more like an introduction!
-
-\verb!maybe hold off on the abstract until you have your data results!
-
-
+\todo{This is sounding more like an introduction, maybe hold off on the abstract until you have your data results?}
 
 The interstice is an intervening space. When applied to a rhythmic context, the interstitial beat can be represented by two distinct states; whether energy exists within this small moment in time or if it does not. 
 
