--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -12,6 +12,7 @@ Testing was divided into two major sections, \textbf{Steady} and \textbf{Dynamic
 
 Each section had three subsections centered around either an audible metronome tone (\textbf{A1, A3}), musical note (\textbf{A2, A4}), and lastly the haptic modality (\textbf{H1, H2}). Subsections were further broken down into \textbf{a} and \textbf{b} sections, denoting either \textit{discrete} or \textit{interstitial}/\textit{continuous} mode of operation. A breakdown of the test plan is shown in Figure \ref{fig:TestPlan}.
 
+As discussed in Chapter 3, the haptic was designed with two operating modes in mind, discrete and continuous. These modes were programmatically controlled to match the desired test cases, extensively explained in section \ref{development}
 \begin{table}[]
     \centering
     \resizebox{\textwidth}{!}{%
@@ -79,23 +80,46 @@ The resultant waveform encapsulated the occupation of the interstitial space. A 
 
 \begin{figure}[H]
     \centering
-    \caption{Waveform comparison}
+    \caption{Metronomic waveform comparison}
         \subfloat[A3a1: discrete audible click]{\includegraphics[width=0.5\columnwidth]{Click_waveform}}
         \subfloat[A3b1: interstitial tone]{\includegraphics[width=0.5\columnwidth]{SwingClick_waveform}}
     \label{fig:click_comparison}
 \end{figure}
 
 \subsubsection{Stacatto and legato melody}
-As a specific musical listening task, test cases \textbf{A2a}, \textbf{A4a} and \textbf{A2b}, \textbf{A4b} involve synchronization to a simple melodic sequence of notes. The music chosen was the well known nursery rhyme \textit{Pat-A-Cake}. 
-
-Each quarter note represents a beat and therefore a tap onset.
+As a specific musical listening task, test cases \textbf{A2a}, \textbf{A4a} and \textbf{A2b}, \textbf{A4b} involve synchronization to a simple melodic sequence of notes. The music chosen was the nursery rhyme \textit{Pat-A-Cake}. The initial mockup was drafted in Sibelius and exported to Logic Pro X for bpm adjustment.
 
 \todo{Expand the reasoning for the musical tests}
 
-Dynamic tempi manipulation
+Each quarter note represents a beat and therefore a tap onset. In order to emphasize a discrete event for test cases \textbf{A2a} and \textbf{A4a}, notes were input as stacatto, shown below: \ref{fig:pat-a-cake_a2a}.
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{Pat-a-Cake_a2a}
+    \label{fig:pat-a-cake_a2a}
+\end{figure}
 
-\pagebreak
+The interstitial counterpart of these test cases (\textbf{A2b}, \textbf{A4b}) underwent crescendo and decrescendo after every note onset with forte notes surrounded by mezzopiano to give the impression of amplitude build up and decay, shown below: \ref{fig:pat-a-cake_a2b} 
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{Pat-a-Cake_A2b}
+    \label{fig:pat-a-cake_a2b}
+\end{figure}
+
+Note below in \ref{fig:music_comparison} the gradual, nearly exponential decay displayed in the interstitial tone as a result of the legato input.
+
+\begin{figure}[H]
+    \centering
+    \caption{Musical waveform comparison}
+        \subfloat[A2a1: stacatto melody]{\includegraphics[width=\columnwidth]{A2a1_waveform}}
+        \qquad
+        \subfloat[A2b1: legato melody]{\includegraphics[width=\columnwidth]{A2b1_waveform}}
+    \label{fig:music_comparison}
+\end{figure}
+
+\subsubsection{Dynamic tempi manipulation}
+
 
 \section{Test Suite}
 High precision data acquisition and the minimization of delay were the central foci of the test suite design. Due to the extensive amount of publicly available libraries, multithreading capability, and plot integration via matplotlib, python was chosen as the development environment. Complementary to the software platform was the implementation of a tap onset detection mechanism via force sensitive resistor and the Arduino Uno. 
