+method left off on test suite

--- a/Thesis/thesis-method.tex
+++ b/Thesis/thesis-method.tex
@@ -119,11 +119,11 @@ Note below in \ref{fig:music_comparison} the gradual, nearly exponential decay d
 \end{figure}
 
 \subsubsection{Dynamic tempi manipulation - audio}
-The dynamic tests involved manipulation of the tempo. This task was accomplished in \textit{Logic Pro X} through automation of the tempo parameter over the time period of the desired waveform. Each test case started on one of the pre-defined BPM's (45,90,135,180) but traversed either sinusoidally or triangular through peaks and troughs ranging plus or minus 15 bpm as shown in \ref{fig:dynamic_audio}.
+Dynamic manipulation of tempo was accomplished in \textit{Logic Pro X} through automation of the tempo parameter over the time period of the desired waveform. Each test case started on one of the pre-defined BPM's (45, 90, 135, 180) but traversed either sinusoidally or triangularly through time as peaks and troughs ranging plus or minus 15 bpm; shown in \ref{fig:dynamic_audio}.
 
 \begin{figure}[H]
     \centering
-    \caption{Dynamic Audio Tempo Automation Patterns}
+    \caption{Dynamic audio tempo automation patterns}
         \subfloat[45 +/- 15]{\includegraphics[width=.5\columnwidth]{dynamic_45}}
         \subfloat[90 +/- 15]{\includegraphics[width=.5\columnwidth]{dynamic_90}}
         \qquad
